--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,9 @@ Deprecated==1.2.18
 detect-secrets==1.5.0
 distlib==0.3.9
 distro==1.9.0
-Django==5.2.2
+Django==5.2.6
 django-phonenumber-field==8.1.0
+django-rq==2.10.1
 djangorestframework==3.15.2
 executing==2.2.0
 filelock==3.18.0
@@ -56,6 +57,7 @@ jupyter_core==5.8.1
 kiwisolver==1.4.8
 license-expression==30.4.3
 localflavor==1.9
+loguru==0.7.3
 lxml==5.4.0
 markdown-it-py==3.0.0
 matplotlib==3.10.0
@@ -89,6 +91,7 @@ pure_eval==0.2.3
 py-serializable==2.0.0
 py4j==0.10.9.7
 pycparser==2.22
+pydantic==2.11.7
 pydantic_core==2.33.2
 pydot==3.0.4
 pygal==3.0.5
@@ -134,4 +137,3 @@ whitenoise==6.9.0
 wrapt==1.17.2
 yarl==1.20.0
 zipp==3.21.0
-django-rq==2.10.1
