--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.12.14
 aiohttp-retry==2.9.1
 aiosignal==1.4.0
 annotated-types==0.7.0
+anyio==4.10.0
 asgiref==3.8.1
 asttokens==3.0.0
 atomicwrites==1.4.1
@@ -10,6 +11,7 @@ attrs==25.3.0
 bcrypt==4.3.0
 boolean.py==5.0
 CacheControl==0.14.3
+cachetools==5.5.2
 certifi==2024.8.30
 cffi==1.17.1
 cfgv==3.4.0
@@ -40,9 +42,15 @@ executing==2.2.0
 filelock==3.18.0
 fonttools==4.56.0
 frozenlist==1.6.0
+fsspec==2025.9.0
 gitdb==4.0.12
 GitPython==3.1.44
+google-auth==2.40.3
+google-genai==1.36.0
 gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 identify==2.6.10
 idna==3.10
 imbalanced-learn==0.13.0
@@ -51,6 +59,7 @@ importlib_metadata==8.6.1
 ipykernel==6.29.5
 ipython==8.32.0
 jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.8.1
@@ -60,9 +69,11 @@ localflavor==1.9
 loguru==0.7.3
 lxml==5.4.0
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+mpmath==1.3.0
 msgpack==1.1.1
 multidict==6.4.3
 narwhals==1.36.0
@@ -70,6 +81,21 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 nodeenv==1.9.1
 numpy==2.2.2
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.3
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvtx-cu12==12.8.90
+opencv-python==4.12.0.88
 packageurl-python==0.17.1
 packaging==24.2
 pandas==2.2.3
@@ -82,6 +108,7 @@ pip-requirements-parser==32.0.1
 pip_audit==2.9.0
 platformdirs==4.3.6
 plotly==6.0.1
+polars==1.33.1
 pre_commit==4.2.0
 prompt_toolkit==3.0.50
 propcache==0.3.1
@@ -90,6 +117,8 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 py-serializable==2.0.0
 py4j==0.10.9.7
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
@@ -111,6 +140,7 @@ requests==2.32.4
 retrying==1.3.4
 rich==14.0.0
 rq==1.15.1
+rsa==4.9.1
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
@@ -118,21 +148,30 @@ setuptools==79.0.0
 six==1.17.0
 sklearn-compat==0.1.3
 smmap==5.0.2
+sniffio==1.3.1
 sortedcontainers==2.4.0
 sqlparse==0.5.3
 stack-data==0.6.3
+sympy==1.14.0
+tenacity==9.1.2
 threadpoolctl==3.5.0
 toml==0.10.2
+torch==2.8.0
+torchvision==0.23.0
 tornado==6.5
 tqdm==4.67.1
 traitlets==5.14.3
+triton==3.4.0
 twilio==9.5.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.1
+ultralytics==8.3.199
+ultralytics-thop==2.0.17
 urllib3==2.5.0
 virtualenv==20.31.2
 wcwidth==0.2.13
+websockets==15.0.1
 whitenoise==6.9.0
 wrapt==1.17.2
 yarl==1.20.0
